Dec 5, 2005

  * ADDED: Each instance of rdfs:Datatype is a subclass of rdfs:Literal
    to the rules of rdf_subclass_of/2.

Nov 24, 2005

  * FIXED: Choicepoint in rdf_global_term/2, returning incorrect result
    on backtracking.

Nov 9, 2005

  * FIXED: generate correct XML for datatypes in defined namespaces.
    Ilmars Poikans.

Oct 11, 2005

  * FIXED: rdf_split_url/3 to detect local part more in line with current
    URI specs.

Sep 23, 2005

  * ENHANCED: issue monitor events with holding write lock.

Sep 22, 2005

  * FIXED: mask-handling in rdf_monitor, causing incorrect callbacks.

  * FIXED: bug in cache handling by rdf_load/2, introduced in 2.3.0.

=============
Version 2.3.0
=============

Sep 16, 2005

  * FIXED: Namespace computation (broken in 5.5.30 version).

  * ADDED: rdf_transaction/2 and rdf_monitor/1.

  * MODIFIED: rdf_source/1 also returns sources added using rdf_assert/4,
    i.e. setof(DB, rdf(_,_,_,DB), DBs), member(DB, DBs).

  * FIXED: rdf_update/[4,5]: unlock after type-error in action.


=============
Version 2.2.1
=============

Aug 10, 2005

  * FIXED: Quick Save Format for wide-character atoms.  Saved first
    character as many times as the length of the atom. 

Aug 4, 2005

  * ADDED: document_language(+Lang) option to rdf_save/2.  Suggested
    by Mark van Assem.

Jul 15, 2005

  * ADDED/CLEANUP: new rdf_meta/1 directive to simplify namespace
    pre-processing.

Jul 5, 2005

  * ADDED/FIXED: Proper quoting of Unicode URI values conforming the
    RDF standard.  Jochem Liem.

Jun 29, 2005

  * FIXED: rdf:about instead of about when saving lists.  Jochem Liem.

May 24, 2005

  * ENHANCED: Added core statistics

  * FIXED: force re-hashing while loading files to avoid slowdown.

May 20, 2005

  * ADDED: Allow list of files in rdf_load/[1,2]

May 19, 2005

  * ADDED: rdf_register_ns/3, allow overruling old alias.

Apr 26, 2005

  * FIXED: support UNICODE in rdf_save_db/rdf_load_db.  Fabien
    Todescato.

Apr 19, 2005
