@@ -1,3 +1,8 @@
+Dec 18, 2005
+
+  * FIXED: Added simpleminded handling for updating the database from
+    within a monitor.
+
 Dec 5, 2005
 
   * ADDED: Each instance of rdfs:Datatype is a subclass of rdfs:Literal
